# z80-digital-twin

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  COMPATIBILITY_TEST_PLAN.md  CONTRIBUTING.md  DEBUGGER_DESIGN.md  DEBUGGER_ROADMAP.md  FLOATING_BUS_DESIGN.md  HEADLESS_INSTRUMENTATION.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  SPECTRUM_DESIGN.md  STATUS.md  TODO.md  design_decisions.md
apps/audio/: audio_output.cpp  audio_output.h
apps/spectrum/: main.cpp
compat/: cpu-suites.json
debugger/: main.cpp
debugger/disasm/: disassembler.cpp  disassembler.h
debugger/exec/: debug_session.cpp  debug_session.h
debugger/symbols/: symbol_table.cpp  symbol_table.h
debugger/ui/: debugger_app.cpp  debugger_app.h  panel.h  symbol_edit.cpp  symbol_edit.h  symbol_style.cpp  symbol_style.h  ui_context.h
debugger/ui/panels/: control_panel.cpp  control_panel.h  disassembly_panel.cpp  disassembly_panel.h  io_panel.cpp  io_panel.h  keyboard_panel.cpp  keyboard_panel.h  memory_panel.cpp  memory_panel.h  registers_panel.cpp  registers_panel.h  screen_panel.cpp  screen_panel.h  smc_panel.cpp  smc_panel.h
docs/: README.md
docs/archive/: documentation-reorg-plan.md  early-design-decisions.md  early-test-results.md  early-todo.md  status-2026-06-06.md
docs/developers/: architecture.md  contributing.md  debugger-design.md  decisions.md  floating-bus-design.md  reverse-engineering-roadmap.md  roadmap.md  spectrum-machine-design.md
docs/reference/: performance.md  status.md
docs/testers/: compatibility-plan.md  cpu-correctness-suites.md  fault-diagnosis.md  headless-instrumentation.md  stabilization-harness-plan.md  test-assets.md  testing.md
docs/users/: debugger.md  examples.md  getting-started.md  spectrum-viewer.md  troubleshooting.md
examples/: README.md  gcd.sym  gcd_example.cpp  gcd_stress_test.cpp  spectrum48k.sym  spectrum_probe.cpp
machine/: device.h  machine.h
machine/spectrum/: beeper.h  keyboard.h  screen.h  spectrum_machine.h  tape.h  timing.h  ula.h  video.h
src/: z80_cpu.cpp  z80_cpu.h
src/io/: callback_io.h  latched_io.h  observable_io.h  open_bus_io.h
src/memory/: debug_memory.h  fast_memory.h  observable_memory.h
tests/: alu_flags_test.cpp  beeper_test.cpp  bit_flags_test.cpp  block_flags_test.cpp  cpu_test.cpp  daa_test.cpp  debug_memory_test.cpp  debug_session_test.cpp  disassembler_test.cpp  floating_bus_test.cpp  inc_dec_flags_test.cpp  instruction_timing_test.cpp  interrupt_test.cpp  io_policy_test.cpp  keyboard_test.cpp  machine_test.cpp  observable_memory_test.cpp  performance_benchmark.cpp  raster_test.cpp  refresh_register_test.cpp  result_flag_sources_test.cpp  rotate_flags_test.cpp  screen_decode_test.cpp  spectrum_boot_test.cpp  spectrum_debug_test.cpp  symbol_table_test.cpp  tape_test.cpp  timing_test.cpp  video_test.cpp  word_arithmetic_flags_test.cpp
tools/cpu_suite_runner/: main.cpp
